# catanrl

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml  retrain.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
infra/: ecs-task-definition.json  eventbridge-rule.json  iam-github-oidc.json
scripts/: bootstrap_aws.sh  dispatch_training.py  evaluate_and_promote.py  run_eval.py
src/api/: __init__.py  main.py  model_loader.py  schemas.py
src/api/routes/: __init__.py  feedback.py  game.py  health.py  predict.py
src/autoResearch/: __init__.py  evaluator.py  experiment.py  mutations.py  researcher.py
src/monitoring/: __init__.py  cloudwatch.py  drift_monitor.py  retraining_trigger.py
src/rl/env/: __init__.py  action_space.py  catan_env.py
src/rl/eval/: __init__.py  agents.py  arena.py  elo.py
src/rl/models/: __init__.py  gnn_encoder.py  policy.py  trade_module.py
src/rl/training/: __init__.py  curriculum.py  mappo.py  self_play.py
src/strategy/: __init__.py  explainer.py  planner.py  templates.py
tests/: conftest.py
tests/integration/: test_full_pipeline.py  test_predict_endpoint.py
tests/unit/: test_action_space.py  test_api_schemas.py  test_catan_env.py  test_curriculum.py  test_drift_monitor.py  test_gnn_encoder.py  test_policy.py
